# Recurrence

./: LICENSE  README.md
Modules/: ModuleList.cmake
Modules/CbicaCommon/: CMakeLists.txt  README.md  files.cmake
Modules/CbicaCommon/include/: DownloadManager.h
Modules/CbicaCommon/src/: DownloadManager.cpp
Modules/CbicaRecurrence/: CMakeLists.txt  README.md  files.cmake
Modules/CbicaRecurrence/include/: FeatureExtractionClass.h  FeatureReductionClass.h  FeatureScalingClass.h  NiftiDataManager.h  OutputWritingManager.h  PreprocessingPipelineClass.h  RecurrenceEstimator.h  itkN3MRIBiasFieldCorrectionImageFilter.h
Modules/CbicaRecurrence/src/: FeatureReductionClass.cpp  NiftiDataManager.cpp  OutputWritingManager.cpp  RecurrenceEstimator.cpp
Plugins/: PluginList.cmake
Plugins/upenn.cbica.recurrence/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.recurrence/src/internal/: QRecurrenceControls.ui  QRecurrenceView.cpp  QRecurrenceView.h  RecurrencePluginActivator.cpp  RecurrencePluginActivator.h
